# Hookify

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hookify/: __init__.py  base.py  registry.py
src/hookify/plugins/: __init__.py  audit.py  cost.py  injection.py  pii.py
tests/: test_injection.py  test_pii.py  test_registry.py
